--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "workflow-ui",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mammoth777.github.io/workflow-ui/",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "jsplumb": "^2.14.3",
+    "jsplumb": "^2.14.5",
     "lodash": "^4.17.19",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -20,6 +23,7 @@
     "@vue/cli-plugin-babel": "^4.4.0",
     "@vue/cli-plugin-typescript": "^4.4.0",
     "@vue/cli-service": "^4.4.0",
+    "gh-pages": "^3.1.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "typescript": "~3.9.3",
