feat: 增加右键菜单

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.19",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-context": "^6.0.0",
     "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
